--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Hello World!</title>
+</head>
+<body>
+<h2>Hello, Coursera!</h2>
+</body>
+</html>
